@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
'hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Simulator {
    itemList
    machineList
    avgExecutionTimeList
    waitingTimeList
    addOperationToQueue()
    createQueues()
    updateMachines()
    printQueue()
    printMachineStatus()
    assignItemToMachine()
    fillWaitingTime()
    printWaitingTime()
    fillExecutionPerOperation()
    calculateAverageExecutionTimes()
    printAverageExecutionTime()
}

class Operation {
    operationName : String
    duration : float
}

class Machine {
    idMachine : ID
    operation : Operation
    processingSpeed : float
    available : boolean
    timeLeftToFinish: float
    currentProcessingItem : Item
    processItem(Item item)
    updateMachine()
    resetMachine()
    printStatus()
}

class Item {
    itemID : ID
    operationList : Queue<Operation>
    currentOperation: Operation
    getNextOperation()
    getCurrentOperation()
    getItemList()

}

Item "1" ---- "1..*" Operation : has >
Machine "1" ---- "         1" Operation: executes >
Simulator "1" -- "1..*" Item : has >
Simulator "1" -- "1..*" Machine : has >

@enduml